sort.pancake.lessons.sort.pancake.BurnedPancake.scala.error
BurnedPancake:2: error: Missing closing brace `}' assumed here
def solve() {for (rang <- getTaillePile-1 to 0 by -1) {
^